k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: three-tier
spec:
  selector:
    matchLabels:
      app: mongodb
  namespace: three-tier
  template:
    metadata:
      labels:
        app: mongodb
    namespace: three-tier
    spec:
      containers:
      - name: mongodb
        image: mongo:4.4.6
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
          - name: mongo-volume
            mountPath: /data/db
      volumes: 
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: mongo-volume-claim
