k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: three-tier
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - port: 3500
    targetPort: 3500
