k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: three-tier
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
